--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <p style="font-weight: bold; text-align: center;">Guess what color rgb(<span id="span_color"></span>, <span id="span_color"></span>, <span id="span_color"></span>) is:<p>
 
-    <form action="#" onsubmit="resetMe()">
+    <form action="#" onsubmit="resetMe(); return false">
         <section class="section__color">
             <div class="div__color"></div>
             <div class="div__color"></div>
